--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
-    <link  rel="stylesheet" href="css/scrollBar.css">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <title>Weather Forecast</title>
 </head>
 <body>
 
 <!--page nav bar section start-->
-<nav>
 
-</nav>
 <!--page nav bar section end-->
 
 <!--<p id="tip-box">Enter a city name into the search bar and click search</p>-->
@@ -24,17 +21,19 @@
 <h1 id="header">weather forecast</h1>
 <!--page main heading end-->
 
-<!--page search bar start-->
-<section class="search">
-    <label>
-        <input type="text" placeholder="Search..." id="citySearch">
-    </label>
-    <input onclick="NameGrabber()" type="button" value="Search" id="searchButton">
-</section>
-<!--page search bar end-->
+
 
 <!--page top weather information start-->
 <section class="weather_info">
+    <!--page search bar start-->
+    <section class="search">
+        <label>
+            <input type="text" placeholder="Search for City" id="citySearch">
+        </label>
+        <input onclick="NameGrabber()" type="button" value="Search" id="searchButton">
+    </section>
+    
+    <!--page search bar end-->
     <h2 id="cityName"></h2>
     <span id="temp_info">
         <span id="temp_label">
@@ -44,12 +43,13 @@
     </span>
     
     <p id="weatherSummary"></p>
-</section>
+
 <!--page top weather information end-->
 
 <!--page daily weather information start-->
 <span id="days-container"></span>
 <!--page daily weather information end-->
+</section>
 
 <!--page script section start-->
 <script src="js/app.js"></script>
@@ -58,9 +58,14 @@
 </body>
 
 <!--page footer section start-->
-<!--<footer>-->
-<!--    <H4>made by smokeofwar</H4>-->
-<!--</footer>-->
+<footer>
+    <nav>
+        <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact Me</a></li>
+        </ul>
+    </nav>
+</footer>
 <!--page footer section end-->
 
 </html>
