created pages for about and contact information

--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
 <h1 id="header">weather forecast</h1>
 <!--page main heading end-->
 
-
-
 <!--page top weather information start-->
 <section class="weather_info">
     <!--page search bar start-->
@@ -32,7 +30,7 @@
         </label>
         <input onclick="NameGrabber()" type="button" value="Search" id="searchButton">
     </section>
-    
+
     <!--page search bar end-->
     <h2 id="cityName"></h2>
     <span id="temp_info">
@@ -61,8 +59,8 @@
 <footer>
     <nav>
         <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact Me</a></li>
+            <li><a href="pages/about_page.html">About</a></li>
+            <li><a href="pages/contact_page.html">Contact Me</a></li>
         </ul>
     </nav>
 </footer>
