added contact form and designed the contact page edited the styles for the about page.

--- a/pages/contact_page.html
+++ b/pages/contact_page.html
@@ -14,13 +14,32 @@
 <h1 id="header">contact page</h1>
 <!--page main heading end-->
 
+<section class="contact-form-box">
+    <h2 id="contact-me">lets chat about everything.</h2>
+    <form class="contact-form">
+        <label for="contact-name">
+            <input type="text" id="contact-name" placeholder="Name" autofocus required>
+        </label>
+        <label for="contact-email">
+            <input type="email" id="contact-email" placeholder="Email" required>
+        </label>
+        <label for="text-area">
+            <textarea id="text-area" placeholder="Text goes here..."></textarea>
+        </label>
+        <label for="send-btn">
+            <input type="button" id="send-btn" value="Send">
+        </label>
+        
+    </form>
+</section>
+
 </body>
 <!--page footer section start-->
 <footer>
     <nav>
         <ul>
-            <li><a href="./about_page.html">About</a></li>
             <li><a href="../index.html">Home</a></li>
+            <li><a href="./about_page.html">About</a></li>
         </ul>
     </nav>
 </footer>
