fixed error in contact form

--- a/pages/contact_page.html
+++ b/pages/contact_page.html
@@ -16,7 +16,7 @@
 
 <section class="contact-form-box">
     <h2 id="contact-me">lets chat about everything.</h2>
-    <form class="contact-form">
+    <form class="contact-form" action="mailto:smokeofwar@gmail.com" method="post" enctype="text/plain">
         <label for="contact-name">
             <input type="text" id="contact-name" placeholder="Name" autofocus required>
         </label>
@@ -27,7 +27,7 @@
             <textarea id="text-area" placeholder="Text goes here..."></textarea>
         </label>
         <label for="send-btn">
-            <input type="button" id="send-btn" value="Send">
+            <input type="submit" id="send-btn" value="Send">
         </label>
         
     </form>
