--- a/pages/contact_page.html
+++ b/pages/contact_page.html
@@ -16,24 +16,23 @@
 
 <section class="contact-form-box">
     <h2 id="contact-me">lets chat about everything.</h2>
-    <form class="contact-form" action="mailto:smokeofwar@gmail.com" method="post" enctype="text/plain">
+    <form class="contact-form" action="https://submit-form.com/zWBX5QGJ" method="post">
         <label for="contact-name">
-            <input type="text" id="contact-name" placeholder="Name" autofocus required>
+            <input type="text" name="contact-name" id="contact-name" placeholder="Name" autofocus required="">
         </label>
         <label for="contact-email">
-            <input type="email" id="contact-email" placeholder="Email" required>
+            <input type="email" name="contact-email" id="contact-email" placeholder="Email" required="">
         </label>
         <label for="text-area">
-            <textarea id="text-area" placeholder="Text goes here..."></textarea>
+            <textarea cols="80" rows="60" id="text-area" name="text-area" placeholder="Text goes here..."
+                      required=""></textarea>
         </label>
         <label for="send-btn">
-            <input type="submit" id="send-btn" value="Send">
+            <button type="submit" id="send-btn">Send</button>
         </label>
-        
     </form>
 </section>
 
-</body>
 <!--page footer section start-->
 <footer>
     <nav>
@@ -44,4 +43,5 @@
     </nav>
 </footer>
 <!--page footer section end-->
+</body>
 </html>
