created a default screen

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <title>Weather Forecast</title>
 </head>
-<body>
+<body onload="defaultPage()">
 
 <!--page main heading start-->
 <h1 id="header">weather forecast</h1>
